--- a/Leetcode Solutions.ipynb
+++ b/Leetcode Solutions.ipynb
@@ -477,6 +477,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Second Way: (Bu da Time Limit Exceeded hatasi veriyor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findDuplicate(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        for c in range(len(nums)):\n",
+    "            if nums.count(nums[c]) > 1:\n",
+    "                return nums[c]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "S9 = Solution()\n",
+    "print(S9.findDuplicate([1,3,4,2,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Question 442. Find All Duplicates in an Array"
    ]
   },
