--- a/Leetcode Solutions.ipynb
+++ b/Leetcode Solutions.ipynb
@@ -686,6 +686,94 @@
     "NOT: 260, 287 ve 442 soru cevap mantigi ayni hatta 287 ve 442 deki kodlarim tamamen ayni. Bu kaodlari jupiter notebookta \n",
     "duzgun calistirabiliyorum. Ancak 287 ve 442 sorular leetcode'da Time Limit Exceeded hatasi veriyor."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 2. Add Two Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        numStr = list(str(x)) \n",
+    "        newlist = list(int(x) for x in numStr)\n",
+    "        self.normal = x\n",
+    "        self.total = newlist[::-1]\n",
+    "        self.index = 0\n",
+    "        self.val = self.total[self.index]\n",
+    "        try:\n",
+    "            self.nextValue = self.total[self.index + 1]\n",
+    "        except IndexError:\n",
+    "            self.nextValue = None\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"%s\" %self.total\n",
+    "        \n",
+    "    def next(self):\n",
+    "        self.index += 1\n",
+    "        self.val = self.total[self.index]\n",
+    "        try:\n",
+    "            self.nextValue = self.total[self.index + 1]\n",
+    "        except:\n",
+    "            self.nextValue = None\n",
+    "            \n",
+    "    def __len__(self):\n",
+    "        return len(self.total)\n",
+    "            \n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1, l2):\n",
+    "        \"\"\"\n",
+    "        :type l1: ListNode\n",
+    "        :type l2: ListNode\n",
+    "        :rtype: ListNode\n",
+    "        \"\"\"\n",
+    "        result = ListNode(l1.normal + l2.normal)\n",
+    "        return result.total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 0, 8]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = ListNode(342)\n",
+    "l2 = ListNode(465)\n",
+    "S = Solution()\n",
+    "S.addTwoNumbers(l1,l2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not: Soruyu anlamadim, kendime gore modifiye ettim."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
