--- a/Leetcode Solutions.ipynb
+++ b/Leetcode Solutions.ipynb
@@ -79,7 +79,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,7 +131,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,7 +182,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,7 +245,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,7 +301,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -359,7 +354,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -425,7 +419,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -476,7 +469,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -890,7 +882,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1029,6 +1020,278 @@
    "metadata": {},
    "source": [
     "<img src=\"Screenshots/Q151.png\" width=\"1200\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 866. Prime Palindrome"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Yol (Yine Time LImit zimbirtisi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def primePalindrome(self, N):\n",
+    "        \"\"\"\n",
+    "        :type N: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        def isPrime(n):\n",
+    "            for st in range(2,n):\n",
+    "                if n%st == 0:\n",
+    "                    return False\n",
+    "                else:\n",
+    "                    continue\n",
+    "            return True\n",
+    "        \n",
+    "        def isPal(num):\n",
+    "            snum = str(num)\n",
+    "            return snum == snum[::-1]    \n",
+    "        \n",
+    "        while True:\n",
+    "            if isPal(N) and N>1:\n",
+    "                if isPrime(N):\n",
+    "                    return N\n",
+    "            N += 1\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3075703"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S866 = Solution()\n",
+    "S866.primePalindrome(3073704)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.Yol (Hala olmuyor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def primePalindrome(self, N):\n",
+    "        isPrime = False\n",
+    "        isPal = lambda snu: True if snu == snu[::-1] else False\n",
+    "        \n",
+    "        def generator_function(n):\n",
+    "            if n == 2:\n",
+    "                n +=1\n",
+    "            for i in range(2,n):\n",
+    "                yield n%i == 0\n",
+    "        while True:\n",
+    "            snum = str(N)\n",
+    "            if isPal(snum) and N>1:\n",
+    "                for res in generator_function(N):\n",
+    "                    if res:\n",
+    "                        isPrime = False\n",
+    "                        break\n",
+    "                    isPrime = True\n",
+    "                if isPrime:\n",
+    "                    return N    \n",
+    "            N += 1  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3075703"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S866 = Solution()\n",
+    "S866.primePalindrome(3073704)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 166. Fraction to Recurring Decimal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Henuz tum testleri gecemiyor (Halledicem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def fractionToDecimal(self, numerator, denominator):\n",
+    "        def findParts(s):\n",
+    "            # this is our experiment tool\n",
+    "            window = \"\"\n",
+    "            \n",
+    "            #We took after '.'\n",
+    "            textorj = s[s.index('.')+1:]\n",
+    "            text = textorj\n",
+    "            \n",
+    "            #if it is 0 don't drown in code\n",
+    "            if textorj == '0':\n",
+    "                return \"\"\n",
+    "            \n",
+    "            #result will be (unrepPart1 + repPart + unrepPart2)inverse\n",
+    "            repFound = False\n",
+    "            unrepPart1 = \"\"\n",
+    "            repPart = \"\"\n",
+    "            unrepPart2 = \"\"\n",
+    "            while text != \"\":\n",
+    "                repFound = False\n",
+    "                temp = \"\"\n",
+    "                # we are taking first element and throwing it away from our test object\n",
+    "                window += text[0]\n",
+    "                text = text[1:]\n",
+    "                #print(\"Window \",window)\n",
+    "                #We will look our test object throug window and try to find repPart\n",
+    "                for deve in range(len(window)):\n",
+    "                    try:\n",
+    "                        #print(\"Text   \",text)\n",
+    "                        #print(\"window \",window)\n",
+    "                        # if there is a similarity we add it into repPart untill we faced with an unrep\n",
+    "                        if window[deve] == text[deve]:\n",
+    "                            temp += text[deve]\n",
+    "                            repFound = True\n",
+    "                        elif repFound and window[deve] != text[deve] and deve != len(window)-1:\n",
+    "                            temp = \"\"\n",
+    "                            break\n",
+    "                    except:\n",
+    "                        if repPart != \"\" and repFound and window.count(repPart)!=len(window):\n",
+    "                            for p in window.split(repPart):\n",
+    "                                if p == \"\":\n",
+    "                                    pass\n",
+    "                                elif len(p) > len(repPart):\n",
+    "                                    temp = window\n",
+    "                        else:\n",
+    "                            temp = \"\"\n",
+    "                                \n",
+    "                        break\n",
+    "                #print(\"Temp    \", temp)\n",
+    "                #print(\"RepPart \", repPart)                            \n",
+    "                if repFound:\n",
+    "                    if len(temp) > len(repPart):\n",
+    "                        if repPart != \"\":\n",
+    "                            for p in temp.split(repPart):\n",
+    "                                if p == \"\":\n",
+    "                                    pass\n",
+    "                                elif len(p) >= len(repPart):\n",
+    "                                    repPart = temp\n",
+    "                        else:\n",
+    "                            repPart = temp\n",
+    "                        #print(\"Temp \", temp,\" Rp \", repPart)\n",
+    "                        continue\n",
+    "                    elif len(text) > 0:\n",
+    "                        continue\n",
+    "                   \n",
+    "                    break\n",
+    "                else:\n",
+    "                    temp = \"\"\n",
+    "                #print(\"Temp    \", temp)\n",
+    "                #print(\"RepPart \", repPart)  \n",
+    "                \n",
+    "            if repPart != \"\":\n",
+    "                p1 = True\n",
+    "                #print(textorj.split(repPart))\n",
+    "                for w in textorj.split(repPart):\n",
+    "                    if p1 and w != '':\n",
+    "                        unrepPart1 += w\n",
+    "                    elif w == '':\n",
+    "                        p1 = False\n",
+    "                    else:\n",
+    "                        unrepPart2 += w\n",
+    "                #print(\"unrepPart1 \",unrepPart1 , \"repPart\",  repPart , \"unrepPart2\", unrepPart2)\n",
+    "                ret = unrepPart1 + \"(\" + repPart + \")\"\n",
+    "            else:\n",
+    "                ret = window\n",
+    "            return ret\n",
+    "        \n",
+    "        res = str(numerator/denominator)\n",
+    "        print(res)\n",
+    "        # res is always float num\n",
+    "        \n",
+    "        if float(res[res.index('.')+1:]) > 0:\n",
+    "            result = res[:res.index('.')+1]+findParts(res)\n",
+    "        else:\n",
+    "            result = res[:res.index('.')]\n",
+    "        \n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.012012012012012012\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'0.(012)'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S166 = Solution()\n",
+    "S166.fractionToDecimal(4,333)"
    ]
   },
   {
