--- a/Leetcode Solutions.ipynb
+++ b/Leetcode Solutions.ipynb
@@ -599,6 +599,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Numpy kullaninca daha hizli oldu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "class Solution:\n",
+    "    def findDuplicate(self, nums):\n",
+    "        arr = np.array(nums)\n",
+    "        con = Counter(nums)\n",
+    "        return con.most_common(1)[0][0]\n",
+    "S9 = Solution()\n",
+    "print(S9.findDuplicate([1,3,4,2,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Screenshots/Q287.png\" width=\"1200\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Question 442. Find All Duplicates in an Array"
    ]
   },
@@ -648,6 +687,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "class Solution:\n",
+    "    def findDuplicates(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        con = Counter(nums)\n",
+    "        \n",
+    "        return [item for item, count in con.items() if count > 1]\n",
+    "S10 = Solution()\n",
+    "print(S10.findDuplicates([4,3,2,7,8,2,3,1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Screenshots/Q442.png\" width=\"1200\" />"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -656,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +784,7 @@
        "[7, 0, 8]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,10 +812,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class ListNode:\n",
+    "    def __init__(self, x):\n",
+    "        numStr = list(str(x)) \n",
+    "        newlist = list(int(x) for x in numStr)\n",
+    "        self.normal = x\n",
+    "        self.total = newlist[::-1]\n",
+    "        self.index = 0\n",
+    "        self.val = self.total[self.index]\n",
+    "        try:\n",
+    "            self.nextValue = self.total[self.index + 1]\n",
+    "        except IndexError:\n",
+    "            self.nextValue = None\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"%s\" %self.total\n",
+    "        \n",
+    "    def next(self):\n",
+    "        self.index += 1\n",
+    "        self.val = self.total[self.index]\n",
+    "        try:\n",
+    "            self.nextValue = self.total[self.index + 1]\n",
+    "        except:\n",
+    "            self.nextValue = None\n",
+    "            \n",
+    "    def __len__(self):\n",
+    "        return len(self.total)\n",
     "class Solution:\n",
     "    def addTwoNumbers(self, l1, l2):\n",
     "        \"\"\"\n",
@@ -788,22 +889,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Q' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'val'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-f257ae524af2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mQ\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'Q' is not defined"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-14ed082f69d5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0ml2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mListNode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m465\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mS\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSolution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddTwoNumbers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ml2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-cb2289455ade>\u001b[0m in \u001b[0;36maddTwoNumbers\u001b[1;34m(self, l1, l2)\u001b[0m\n\u001b[0;32m     48\u001b[0m                 \u001b[0mt1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m                 \u001b[0mt1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mval\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0ml2\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m                 \u001b[0mt2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'function' object has no attribute 'val'"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "l1 = ListNode(342)\n",
+    "l2 = ListNode(465)\n",
+    "S = Solution()\n",
+    "S.addTwoNumbers(l1,l2)"
+   ]
   },
   {
    "cell_type": "markdown",
